--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,6 +1,106 @@
-.main-container{
+.main-cont {
     display: flex;
     justify-content: space-between;
     min-height: 100%;
     width: 100%;
+    background: #dddddd;
+    border: 1px solid #0e4755;
 }
+
+.header {
+
+    width: 100%;
+    height: 100px;
+    border: 1px solid #0e4755;
+    background: #bbbbbb;
+}
+
+.user-menu {
+    text-align: right;
+
+}
+
+.login-form {
+
+}
+
+.vechicles-list {
+
+}
+
+.error {
+
+}
+.regbutton {
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 6px 24px;
+    cursor: pointer;
+
+}
+
+.regbutton:hover {
+    background: #ccc;
+}
+
+#window {
+    width: 350px;
+    height: 530px;
+    margin: 40px auto;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    z-index: 150;
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.form {
+    width: 275px;
+    margin: -15px auto 20px auto;
+    text-align: center;
+}
+
+.input {
+    width: 260px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.radio {
+    margin-bottom: 10px;
+}
+
+.close {
+    margin: 10px 0 0 320px;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    padding: 2px;
+    background: #fff;
+}
+
+.close:hover {
+    background: #ccc;
+}
+
+#gray {
+    background-color: #d3d3d3;
+    opacity: 0.8;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+    z-index: 100;
+    overflow: auto;
+    padding: 15px;
+}
+
+
+
