--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     min-height: 100%;
     width: 100%;
-    background: #dddddd;
+    background: #ADD8E6;
     border: 1px solid #0e4755;
 }
 
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100px;
     border: 1px solid #0e4755;
-    background: #bbbbbb;
+    background: #87CEEB;
 }
 
 .user-menu {
@@ -46,8 +46,8 @@
 
 #window {
     width: 350px;
-    height: 530px;
-    margin: 40px auto;
+    height: 440px;
+    margin: 80px auto;
     background: #fff;
     border: 1px solid #fff;
     border-radius: 15px;
@@ -77,9 +77,8 @@
 }
 
 .close {
-    margin: 10px 0 0 320px;
+    margin: 10px 10px;
     cursor: pointer;
-    border: 1px solid #ccc;
     padding: 2px;
     background: #fff;
 }
