--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -17,7 +17,6 @@
 
 .user-menu {
     text-align: right;
-
 }
 
 .login-form {
@@ -31,22 +30,53 @@
 .error {
 
 }
+
 .regbutton {
     background: #fff;
     border: 1px solid #ccc;
     border-radius: 3px;
     padding: 6px 24px;
     cursor: pointer;
-
+    margin-right: 10px;
 }
 
 .regbutton:hover {
     background: #ccc;
 }
 
+.logbutton {
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 6px 24px;
+    cursor: pointer;
+    margin: 10px;
+
+}
+
+.logbutton:hover {
+    background: #ccc;
+}
+
 #window {
     width: 350px;
-    height: 440px;
+    height: 600px;
+    margin: 80px auto;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    z-index: 150;
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+#window-login {
+    width: 350px;
+    height: 320px;
     margin: 80px auto;
     background: #fff;
     border: 1px solid #fff;
@@ -66,14 +96,22 @@
     text-align: center;
 }
 
+.formlog {
+    width: 275px;
+    margin: -15px auto 20px auto;
+    text-align: center;
+}
+
 .input {
     width: 260px;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
-.radio {
-    margin-bottom: 10px;
+.input-login{
+    width: 130px;
+    padding: 5px;
+    margin-bottom: 15px;
 }
 
 .close {
@@ -101,5 +139,17 @@
     padding: 15px;
 }
 
+
+.asterisk {
+    color: red;
+}
+
+.auth-form-label{
+    padding-bottom: 2px;
+    font-style: italic;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 8px;
+}
 
 
