--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -108,7 +108,7 @@
     margin-bottom: 15px;
 }
 
-.input-login{
+.input-login {
     width: 130px;
     padding: 5px;
     margin-bottom: 15px;
@@ -139,17 +139,28 @@
     padding: 15px;
 }
 
+#gray1 {
+    background-color: #d3d3d3;
+    opacity: 0.8;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+    z-index: 100;
+    overflow: auto;
+    padding: 15px;
+}
 
 .asterisk {
     color: red;
 }
 
-.auth-form-label{
+.auth-form-label {
     padding-bottom: 2px;
     font-style: italic;
     font-size: 14px;
     text-align: left;
     padding-left: 8px;
 }
-
-
